2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>

	* src/CMakeLists.txt, src/formats/CMakeLists.txt: Updates in order to
	build after obmolecformat.cpp was moved.

2008-04-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* autogen.sh, autoconf/: Add macros to work with new libtool 2.2.2.

	* configure.in, configure, aclocal.m4:  */Makefile.in: Use above.

	* src/obmolecformat.cpp: Move from src/formats to facilitate
	external programs creating OBMolecFormat subclasses.

	* src/formats/opendxformat.cpp: New format for OpenDX grids from
	APBS.

2008-04-30  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/mol.h: Add units to documentation for
	GetTorsion/SetTorsion.

	* tools/obrotate.cpp: Total review of the code. Thanks to Josep Maria
	and Noel for pointing out the problems.

	* src/mol.cpp: Added UnsetSSSRPerceived to all OBMol::Delete*()
	functions. (not DeleteConformer(int i), doesn't change rings... )

	* scripts/python/examples/*.py: Added some force field examples. More
	will follow.

	* include/openbabel/bond.h: Add some defensive checks to
	OBBond::GetBeginAtomIdx, OBBond::GetEndAtomIdx and
	OBBond::GetNbrAtomIdx. (closes #1953657)

	* scripts/openbabel-python.i: Added OBForceField::SetLogToStdOut() and
	OBForceField::SetLogToStdErr() to replace SetLogFile(std::ostream
	*pos) in python.

2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>

	* src/CMakeLists.txt, src/formats/CMakeLists.txt: Moved the
	obmolecformat.cpp linkage back to where it was - this works on both
	Windows and Linux and so seems the better solution.

2008-04-29  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Torsion constraints are working now.

2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Removed trailing
	white space.

2008-04-28  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: Added groups and Ignore.
