@@ -93,127 +93,131 @@ static const char AtomTypeData[] = {
  0x30,0x5D,0x29,0x5D,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,
  0x24,0x28,0x4E,0x3D,0x2A,0x29,0x5D,0x09,0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,
  0x41,0x4C,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x72,0x30,0x5D,0x3D,0x43,0x5B,0x4E,
- 0x72,0x30,0x5D,0x29,0x5D,0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x24,0x28,0x5B,0x23,0x37,0x44,0x31,0x2D,0x5D,0x3D,0x2A,0x29,0x5D,0x20,
- 0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x6E,0x5D,0x09,0x09,0x09,
- 0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x6E,0x2D,0x5D,0x09,0x09,
- 0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x6E,0x2B,0x5D,0x09,
- 0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x39,0x44,
- 0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,
- 0x23,0x39,0x44,0x30,0x2D,0x5D,0x09,0x09,0x20,0x30,0x20,0x23,0x5B,0x46,0x2D,
- 0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,0x34,0x5D,0x20,
- 0x34,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x34,
- 0x5D,0x09,0x09,0x09,0x34,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,
- 0x31,0x35,0x44,0x33,0x5D,0x09,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,
- 0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x32,0x5D,0x09,0x09,0x09,0x33,0x0A,0x49,
- 0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x31,0x5E,0x33,0x5D,
- 0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,
- 0x44,0x31,0x5E,0x32,0x5D,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,
- 0x20,0x5B,0x23,0x31,0x35,0x44,0x30,0x5D,0x20,0x33,0x0A,0x49,0x4D,0x50,0x56,
- 0x41,0x4C,0x20,0x5B,0x24,0x28,0x5B,0x23,0x31,0x35,0x5D,0x3D,0x5B,0x23,0x36,
- 0x5D,0x29,0x5D,0x20,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x70,
- 0x44,0x32,0x5D,0x09,0x09,0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x24,0x28,0x5B,0x23,0x31,0x35,0x5D,0x3D,0x5B,0x23,0x38,0x5D,0x29,0x5D,
- 0x09,0x09,0x34,0x20,0x23,0x20,0x70,0x68,0x6F,0x73,0x70,0x68,0x69,0x6E,0x61,
- 0x74,0x65,0x20,0x28,0x64,0x6F,0x75,0x62,0x6C,0x65,0x20,0x62,0x6F,0x6E,0x64,
- 0x20,0x3D,0x20,0x6F,0x6E,0x65,0x20,0x76,0x61,0x6C,0x65,0x6E,0x63,0x65,0x29,
- 0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,
- 0x09,0x32,0x20,0x23,0x72,0x65,0x76,0x69,0x73,0x65,0x64,0x20,0x43,0x4D,0x20,
- 0x41,0x70,0x72,0x69,0x6C,0x20,0x32,0x30,0x30,0x38,0x0A,0x49,0x4D,0x50,0x56,
- 0x41,0x4C,0x20,0x5B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x31,0x5D,0x3D,0x2A,
- 0x29,0x5D,0x09,0x09,0x31,0x20,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,
- 0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x33,0x5D,0x28,0x3D,0x4F,0x29,0x28,0x3D,
- 0x4F,0x29,0x2D,0x4F,0x29,0x5D,0x09,0x34,0x20,0x23,0x65,0x2E,0x67,0x2E,0x20,
- 0x4F,0x5B,0x53,0x5D,0x28,0x3D,0x4F,0x29,0x3D,0x4F,0x0A,0x49,0x4D,0x50,0x56,
- 0x41,0x4C,0x20,0x5B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x32,0x5D,0x28,0x3D,
- 0x4F,0x29,0x2D,0x4F,0x29,0x5D,0x09,0x33,0x20,0x23,0x20,0x65,0x2E,0x67,0x2E,
- 0x20,0x4F,0x5B,0x53,0x5D,0x3D,0x4F,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x23,0x31,0x37,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,
- 0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,0x37,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,
- 0x20,0x23,0x5B,0x43,0x6C,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x23,0x33,0x35,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,
- 0x56,0x41,0x4C,0x20,0x5B,0x23,0x33,0x35,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,
- 0x20,0x23,0x5B,0x42,0x72,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x23,0x35,0x33,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,
- 0x56,0x41,0x4C,0x20,0x5B,0x23,0x35,0x33,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,
- 0x20,0x23,0x5B,0x49,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,
- 0x23,0x35,0x5D,0x09,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
- 0x5B,0x61,0x73,0x5D,0x09,0x09,0x09,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
- 0x09,0x5B,0x23,0x37,0x5E,0x33,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x33,0x0A,
- 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x37,0x58,0x34,0x2B,0x5D,0x09,
- 0x09,0x09,0x09,0x09,0x4E,0x33,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
- 0x5B,0x23,0x37,0x5E,0x32,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x70,0x6C,0x0A,
- 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x37,0x5E,0x31,0x5D,0x09,0x09,
- 0x09,0x09,0x09,0x4E,0x31,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,
- 0x28,0x4E,0x3D,0x2A,0x29,0x5D,0x09,0x09,0x09,0x09,0x4E,0x32,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x72,0x30,0x5D,0x43,0x28,
- 0x3D,0x5B,0x4E,0x72,0x30,0x5D,0x29,0x5B,0x4E,0x72,0x30,0x5D,0x29,0x5D,0x09,
- 0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,
- 0x5B,0x4E,0x72,0x30,0x5D,0x3D,0x43,0x28,0x5B,0x4E,0x72,0x30,0x5D,0x29,0x5B,
- 0x4E,0x72,0x30,0x5D,0x29,0x5D,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,0x54,
- 0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x44,0x31,0x5D,0x3D,0x43,0x5B,
- 0x4E,0x44,0x31,0x5D,0x29,0x5D,0x09,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x44,0x31,0x5D,0x43,0x3D,
- 0x5B,0x4E,0x44,0x31,0x5D,0x29,0x5D,0x09,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,
- 0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x4E,0x28,0x4F,0x29,0x2A,0x29,
- 0x5D,0x09,0x09,0x09,0x09,0x4E,0x6F,0x78,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
- 0x09,0x5B,0x24,0x28,0x4E,0x43,0x3D,0x5B,0x4F,0x2C,0x53,0x5D,0x29,0x5D,0x09,
- 0x09,0x09,0x09,0x4E,0x61,0x6D,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,
- 0x24,0x28,0x4E,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,0x44,
- 0x31,0x5D,0x29,0x5D,0x09,0x09,0x09,0x4E,0x74,0x72,0x0A,0x45,0x58,0x54,0x54,
- 0x59,0x50,0x09,0x5B,0x6E,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x61,0x72,0x0A,
- 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x5E,0x33,0x5D,0x09,0x09,
- 0x09,0x09,0x09,0x43,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,
- 0x36,0x5E,0x32,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x32,0x0A,0x45,0x58,0x54,
- 0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x43,0x28,0x3D,0x4F,0x29,0x5B,0x4F,0x44,
- 0x31,0x5D,0x29,0x5D,0x09,0x09,0x09,0x09,0x43,0x61,0x63,0x0A,0x45,0x58,0x54,
- 0x54,0x59,0x50,0x09,0x5B,0x63,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x61,0x72,
- 0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x5E,0x31,0x5D,0x09,
- 0x09,0x09,0x09,0x09,0x43,0x31,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,
- 0x23,0x36,0x2B,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x2B,0x0A,0x45,0x58,0x54,
- 0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x2D,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,
- 0x2D,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x38,0x5E,0x33,0x5D,
- 0x09,0x09,0x09,0x09,0x09,0x4F,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
- 0x5B,0x23,0x38,0x5E,0x32,0x5D,0x09,0x09,0x09,0x09,0x09,0x4F,0x32,0x0A,0x45,
- 0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x24,0x28,0x4F,0x61,0x29,0x5D,0x09,0x09,
- 0x09,0x09,0x09,0x4F,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,
- 0x28,0x5B,0x4F,0x44,0x32,0x5D,0x43,0x3D,0x5B,0x4F,0x2C,0x53,0x5D,0x29,0x5D,
- 0x09,0x09,0x09,0x4F,0x33,0x09,0x23,0x65,0x73,0x74,0x65,0x72,0x20,0x6F,0x78,
- 0x79,0x67,0x65,0x6E,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x24,0x28,
- 0x4F,0x61,0x29,0x5D,0x09,0x09,0x09,0x09,0x09,0x4F,0x33,0x20,0x23,0x61,0x72,
- 0x6F,0x6D,0x61,0x74,0x69,0x63,0x20,0x65,0x74,0x68,0x65,0x72,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x38,0x2D,0x5D,0x09,0x09,0x09,0x09,0x09,
- 0x4F,0x2D,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x24,0x28,0x5B,0x23,
- 0x38,0x44,0x31,0x5D,0x7E,0x5B,0x23,0x36,0x5D,0x7E,0x5B,0x23,0x38,0x44,0x31,
- 0x5D,0x29,0x5D,0x09,0x09,0x09,0x4F,0x2E,0x63,0x6F,0x32,0x20,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x35,0x5D,0x09,0x09,0x09,0x09,0x09,
- 0x50,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x35,0x58,0x34,
- 0x2B,0x5D,0x09,0x09,0x09,0x09,0x50,0x33,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,
- 0x50,0x09,0x5B,0x23,0x31,0x35,0x3B,0x24,0x28,0x5B,0x23,0x31,0x35,0x44,0x34,
- 0x5D,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x28,0x7E,0x5B,0x4F,0x44,0x31,
- 0x5D,0x29,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x5D,0x09,0x50,0x61,0x63,0x0A,
- 0x45,0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x23,0x31,0x35,0x3B,0x24,0x28,0x5B,
- 0x23,0x31,0x35,0x44,0x33,0x5D,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,
- 0x5B,0x4F,0x44,0x31,0x5D,0x29,0x5D,0x09,0x09,0x50,0x61,0x63,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,0x09,0x09,0x09,
- 0x53,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x44,
- 0x33,0x2B,0x2C,0x23,0x31,0x36,0x58,0x33,0x2B,0x5D,0x09,0x09,0x09,0x09,0x53,
- 0x33,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x3B,
- 0x73,0x2C,0x24,0x28,0x5B,0x53,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x09,0x09,
- 0x09,0x53,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,
- 0x44,0x34,0x3B,0x24,0x28,0x53,0x28,0x3D,0x4F,0x29,0x28,0x3D,0x4F,0x29,0x29,
- 0x5D,0x09,0x09,0x09,0x53,0x6F,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
- 0x5B,0x23,0x31,0x36,0x44,0x33,0x3B,0x24,0x28,0x53,0x28,0x3D,0x4F,0x29,0x29,
- 0x5D,0x09,0x09,0x09,0x53,0x6F,0x78,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
- 0x5B,0x23,0x31,0x36,0x3B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x34,0x5D,0x28,
- 0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,
- 0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x5D,0x09,0x53,0x61,0x63,0x0A,0x45,0x58,
- 0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x3B,0x24,0x28,0x5B,0x23,0x31,
- 0x36,0x44,0x33,0x5D,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,
- 0x44,0x31,0x5D,0x29,0x5D,0x09,0x09,0x53,0x61,0x63,0x0A,0x45,0x58,0x54,0x54,
- 0x59,0x50,0x09,0x5B,0x23,0x35,0x5D,0x09,0x09,0x09,0x09,0x09,0x42,0x32,0x0A,
- 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x35,0x44,0x34,0x5D,0x09,0x09,
- 0x09,0x09,0x09,0x42,0x33,0x0A,0x00};
+ 0x72,0x30,0x5D,0x29,0x5D,0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,
+ 0x5B,0x24,0x28,0x5B,0x4E,0x2B,0x72,0x30,0x5D,0x3D,0x43,0x5B,0x4E,0x72,0x30,
+ 0x5D,0x29,0x5D,0x09,0x33,0x09,0x23,0x20,0x70,0x61,0x74,0x63,0x68,0x20,0x66,
+ 0x72,0x6F,0x6D,0x20,0x53,0x74,0x65,0x76,0x65,0x20,0x43,0x6F,0x6E,0x73,0x74,
+ 0x61,0x62,0x6C,0x65,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x24,0x28,
+ 0x5B,0x23,0x37,0x44,0x31,0x2D,0x5D,0x3D,0x2A,0x29,0x5D,0x20,0x31,0x0A,0x49,
+ 0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x6E,0x5D,0x09,0x09,0x09,0x32,0x0A,0x49,
+ 0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x6E,0x2D,0x5D,0x09,0x09,0x09,0x32,0x0A,
+ 0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x6E,0x2B,0x5D,0x09,0x09,0x09,0x33,
+ 0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x39,0x44,0x30,0x5D,0x09,
+ 0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x39,0x44,
+ 0x30,0x2D,0x5D,0x09,0x09,0x20,0x30,0x20,0x23,0x5B,0x46,0x2D,0x5D,0x0A,0x49,
+ 0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,0x34,0x5D,0x20,0x34,0x0A,0x49,
+ 0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x34,0x5D,0x09,0x09,
+ 0x09,0x34,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,
+ 0x33,0x5D,0x09,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,
+ 0x23,0x31,0x35,0x44,0x32,0x5D,0x09,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,
+ 0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x31,0x5E,0x33,0x5D,0x09,0x09,0x33,
+ 0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x09,0x5B,0x23,0x31,0x35,0x44,0x31,0x5E,
+ 0x32,0x5D,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,
+ 0x31,0x35,0x44,0x30,0x5D,0x20,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
+ 0x5B,0x24,0x28,0x5B,0x23,0x31,0x35,0x5D,0x3D,0x5B,0x23,0x36,0x5D,0x29,0x5D,
+ 0x20,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x70,0x44,0x32,0x5D,
+ 0x09,0x09,0x09,0x32,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x24,0x28,
+ 0x5B,0x23,0x31,0x35,0x5D,0x3D,0x5B,0x23,0x38,0x5D,0x29,0x5D,0x09,0x09,0x34,
+ 0x20,0x23,0x20,0x70,0x68,0x6F,0x73,0x70,0x68,0x69,0x6E,0x61,0x74,0x65,0x20,
+ 0x28,0x64,0x6F,0x75,0x62,0x6C,0x65,0x20,0x62,0x6F,0x6E,0x64,0x20,0x3D,0x20,
+ 0x6F,0x6E,0x65,0x20,0x76,0x61,0x6C,0x65,0x6E,0x63,0x65,0x29,0x0A,0x49,0x4D,
+ 0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,0x09,0x32,0x20,
+ 0x23,0x72,0x65,0x76,0x69,0x73,0x65,0x64,0x20,0x43,0x4D,0x20,0x41,0x70,0x72,
+ 0x69,0x6C,0x20,0x32,0x30,0x30,0x38,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
+ 0x5B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x09,
+ 0x09,0x31,0x20,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x24,0x28,0x5B,
+ 0x23,0x31,0x36,0x44,0x33,0x5D,0x28,0x3D,0x4F,0x29,0x28,0x3D,0x4F,0x29,0x2D,
+ 0x4F,0x29,0x5D,0x09,0x34,0x20,0x23,0x65,0x2E,0x67,0x2E,0x20,0x4F,0x5B,0x53,
+ 0x5D,0x28,0x3D,0x4F,0x29,0x3D,0x4F,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,
+ 0x5B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x32,0x5D,0x28,0x3D,0x4F,0x29,0x2D,
+ 0x4F,0x29,0x5D,0x09,0x33,0x20,0x23,0x20,0x65,0x2E,0x67,0x2E,0x20,0x4F,0x5B,
+ 0x53,0x5D,0x3D,0x4F,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x31,
+ 0x37,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,
+ 0x20,0x5B,0x23,0x31,0x37,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,0x20,0x23,0x5B,
+ 0x43,0x6C,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x33,
+ 0x35,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,
+ 0x20,0x5B,0x23,0x33,0x35,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,0x20,0x23,0x5B,
+ 0x42,0x72,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x35,
+ 0x33,0x44,0x30,0x5D,0x09,0x09,0x20,0x31,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,
+ 0x20,0x5B,0x23,0x35,0x33,0x44,0x30,0x2D,0x5D,0x09,0x20,0x30,0x20,0x23,0x5B,
+ 0x49,0x2D,0x5D,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x23,0x35,0x5D,
+ 0x09,0x09,0x09,0x33,0x0A,0x49,0x4D,0x50,0x56,0x41,0x4C,0x20,0x5B,0x61,0x73,
+ 0x5D,0x09,0x09,0x09,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,
+ 0x37,0x5E,0x33,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x33,0x0A,0x45,0x58,0x54,
+ 0x54,0x59,0x50,0x09,0x5B,0x23,0x37,0x58,0x34,0x2B,0x5D,0x09,0x09,0x09,0x09,
+ 0x09,0x4E,0x33,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x37,
+ 0x5E,0x32,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x70,0x6C,0x0A,0x45,0x58,0x54,
+ 0x54,0x59,0x50,0x09,0x5B,0x23,0x37,0x5E,0x31,0x5D,0x09,0x09,0x09,0x09,0x09,
+ 0x4E,0x31,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x4E,0x3D,
+ 0x2A,0x29,0x5D,0x09,0x09,0x09,0x09,0x4E,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x72,0x30,0x5D,0x43,0x28,0x3D,0x5B,0x4E,
+ 0x72,0x30,0x5D,0x29,0x5B,0x4E,0x72,0x30,0x5D,0x29,0x5D,0x09,0x09,0x4E,0x67,
+ 0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x72,
+ 0x30,0x5D,0x3D,0x43,0x28,0x5B,0x4E,0x72,0x30,0x5D,0x29,0x5B,0x4E,0x72,0x30,
+ 0x5D,0x29,0x5D,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
+ 0x09,0x5B,0x24,0x28,0x5B,0x4E,0x44,0x31,0x5D,0x3D,0x43,0x5B,0x4E,0x44,0x31,
+ 0x5D,0x29,0x5D,0x09,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x24,0x28,0x5B,0x4E,0x44,0x31,0x5D,0x43,0x3D,0x5B,0x4E,0x44,
+ 0x31,0x5D,0x29,0x5D,0x09,0x09,0x09,0x4E,0x67,0x2B,0x0A,0x45,0x58,0x54,0x54,
+ 0x59,0x50,0x09,0x5B,0x24,0x28,0x4E,0x28,0x4F,0x29,0x2A,0x29,0x5D,0x09,0x09,
+ 0x09,0x09,0x4E,0x6F,0x78,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,
+ 0x28,0x4E,0x43,0x3D,0x5B,0x4F,0x2C,0x53,0x5D,0x29,0x5D,0x09,0x09,0x09,0x09,
+ 0x4E,0x61,0x6D,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x4E,
+ 0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,
+ 0x5D,0x09,0x09,0x09,0x4E,0x74,0x72,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
+ 0x5B,0x6E,0x5D,0x09,0x09,0x09,0x09,0x09,0x4E,0x61,0x72,0x0A,0x45,0x58,0x54,
+ 0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x5E,0x33,0x5D,0x09,0x09,0x09,0x09,0x09,
+ 0x43,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x5E,0x32,
+ 0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
+ 0x09,0x5B,0x24,0x28,0x43,0x28,0x3D,0x4F,0x29,0x5B,0x4F,0x44,0x31,0x5D,0x29,
+ 0x5D,0x09,0x09,0x09,0x09,0x43,0x61,0x63,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
+ 0x09,0x5B,0x63,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x61,0x72,0x0A,0x45,0x58,
+ 0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x5E,0x31,0x5D,0x09,0x09,0x09,0x09,
+ 0x09,0x43,0x31,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x36,0x2B,
+ 0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,
+ 0x09,0x5B,0x23,0x36,0x2D,0x5D,0x09,0x09,0x09,0x09,0x09,0x43,0x2D,0x0A,0x45,
+ 0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x38,0x5E,0x33,0x5D,0x09,0x09,0x09,
+ 0x09,0x09,0x4F,0x33,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x38,
+ 0x5E,0x32,0x5D,0x09,0x09,0x09,0x09,0x09,0x4F,0x32,0x0A,0x45,0x58,0x54,0x54,
+ 0x59,0x50,0x20,0x5B,0x24,0x28,0x4F,0x61,0x29,0x5D,0x09,0x09,0x09,0x09,0x09,
+ 0x4F,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x24,0x28,0x5B,0x4F,
+ 0x44,0x32,0x5D,0x43,0x3D,0x5B,0x4F,0x2C,0x53,0x5D,0x29,0x5D,0x09,0x09,0x09,
+ 0x4F,0x33,0x09,0x23,0x65,0x73,0x74,0x65,0x72,0x20,0x6F,0x78,0x79,0x67,0x65,
+ 0x6E,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x24,0x28,0x4F,0x61,0x29,
+ 0x5D,0x09,0x09,0x09,0x09,0x09,0x4F,0x33,0x20,0x23,0x61,0x72,0x6F,0x6D,0x61,
+ 0x74,0x69,0x63,0x20,0x65,0x74,0x68,0x65,0x72,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x23,0x38,0x2D,0x5D,0x09,0x09,0x09,0x09,0x09,0x4F,0x2D,0x0A,
+ 0x45,0x58,0x54,0x54,0x59,0x50,0x20,0x5B,0x24,0x28,0x5B,0x23,0x38,0x44,0x31,
+ 0x5D,0x7E,0x5B,0x23,0x36,0x5D,0x7E,0x5B,0x23,0x38,0x44,0x31,0x5D,0x29,0x5D,
+ 0x09,0x09,0x09,0x4F,0x2E,0x63,0x6F,0x32,0x20,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x23,0x31,0x35,0x5D,0x09,0x09,0x09,0x09,0x09,0x50,0x0A,0x45,
+ 0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x35,0x58,0x34,0x2B,0x5D,0x09,
+ 0x09,0x09,0x09,0x50,0x33,0x2B,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,
+ 0x23,0x31,0x35,0x3B,0x24,0x28,0x5B,0x23,0x31,0x35,0x44,0x34,0x5D,0x28,0x7E,
+ 0x5B,0x4F,0x44,0x31,0x5D,0x29,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,
+ 0x5B,0x4F,0x44,0x31,0x5D,0x29,0x5D,0x09,0x50,0x61,0x63,0x0A,0x45,0x58,0x54,
+ 0x54,0x59,0x50,0x20,0x5B,0x23,0x31,0x35,0x3B,0x24,0x28,0x5B,0x23,0x31,0x35,
+ 0x44,0x33,0x5D,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,0x44,
+ 0x31,0x5D,0x29,0x5D,0x09,0x09,0x50,0x61,0x63,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x23,0x31,0x36,0x5D,0x09,0x09,0x09,0x09,0x09,0x53,0x33,0x0A,
+ 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x44,0x33,0x2B,0x2C,
+ 0x23,0x31,0x36,0x58,0x33,0x2B,0x5D,0x09,0x09,0x09,0x09,0x53,0x33,0x2B,0x0A,
+ 0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x3B,0x73,0x2C,0x24,
+ 0x28,0x5B,0x53,0x44,0x31,0x5D,0x3D,0x2A,0x29,0x5D,0x09,0x09,0x09,0x53,0x32,
+ 0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,0x36,0x44,0x34,0x3B,
+ 0x24,0x28,0x53,0x28,0x3D,0x4F,0x29,0x28,0x3D,0x4F,0x29,0x29,0x5D,0x09,0x09,
+ 0x09,0x53,0x6F,0x32,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,
+ 0x36,0x44,0x33,0x3B,0x24,0x28,0x53,0x28,0x3D,0x4F,0x29,0x29,0x5D,0x09,0x09,
+ 0x09,0x53,0x6F,0x78,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,0x5B,0x23,0x31,
+ 0x36,0x3B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x34,0x5D,0x28,0x7E,0x5B,0x4F,
+ 0x44,0x31,0x5D,0x29,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,
+ 0x44,0x31,0x5D,0x29,0x5D,0x09,0x53,0x61,0x63,0x0A,0x45,0x58,0x54,0x54,0x59,
+ 0x50,0x09,0x5B,0x23,0x31,0x36,0x3B,0x24,0x28,0x5B,0x23,0x31,0x36,0x44,0x33,
+ 0x5D,0x28,0x7E,0x5B,0x4F,0x44,0x31,0x5D,0x29,0x7E,0x5B,0x4F,0x44,0x31,0x5D,
+ 0x29,0x5D,0x09,0x09,0x53,0x61,0x63,0x0A,0x45,0x58,0x54,0x54,0x59,0x50,0x09,
+ 0x5B,0x23,0x35,0x5D,0x09,0x09,0x09,0x09,0x09,0x42,0x32,0x0A,0x45,0x58,0x54,
+ 0x54,0x59,0x50,0x09,0x5B,0x23,0x35,0x44,0x34,0x5D,0x09,0x09,0x09,0x09,0x09,
+ 0x42,0x33,0x0A,0x00};
 
 } // namespace OpenBabel
 #endif // OB_ATOMTYP_H
